force-app/main/default/objects/AnalyticsEvent__c/AnalyticsEvent__c.object-meta.xml
<CustomObject>
    <label>AnalyticsEvent</label>
    <nameField>
        <label>AnalyticsEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnalyticsEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>