force-app/main/default/objects/AnalyticsEvent__c/fields/dataset_name__c.field-meta.xml
<CustomField>
    <fullName>dataset_name__c</fullName>
    <label>Dataset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>