force-app/main/default/objects/AnalyticsEvent__c/fields/fields__c.field-meta.xml
<CustomField>
    <fullName>fields__c</fullName>
    <label>fields</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>