force-app/main/default/objects/AnalyticsEvent__c/fields/selection__c.field-meta.xml
<CustomField>
    <fullName>selection__c</fullName>
    <label>selection</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>