force-app/main/default/objects/AnalyticsEvent__c/fields/step__c.field-meta.xml
<CustomField>
    <fullName>step__c</fullName>
    <label>step</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>